# invicti-assessment

./: CMakeLists.txt  README.md  findingLoginPage.cpp  getLoginPageData.cpp  invicti_assessment.hpp  launch.sh  main.cpp  parsing.cpp  readme
files/includes/: invicti_assessment.hpp
files/srcs/: findingLoginPage.cpp  getLoginPageData.cpp  main.cpp  parsing.cpp
